Fixed providers details serialization
